--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.0.1-beta3",
     "pubsub-js": "^1.7.0",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
